@@ -2,14 +2,17 @@
 # Homework 6 - Responding to Change
 
 ## Authors
-1) Name, netid, [GitHub profile name]
+1) Ridge Redding, usy7dp, [GitHub profile name]
 2) Name, netid, [GitHub profile name]
-3) Name, netid, [GitHub profile name]
-4) Name, netid, [GitHub profile name]
+3) Martin Desousa, crx7jg, [martindesousa]
 
 ## To Run
 
-[Add a brief description of which .java file to run, and what vm arguments are needed]
+Run the file CourseReviewsApplication.java to run the Application. Ensure that before running, enable the following VM arguments:
+
+--module-path (PATH TO YOUR JAVAFX FOLDER) --add-modules javafx.controls,javafx.fxml
+
+where "(PATH TO YOUR JAVAFX FOLDER)" is based on where your JavaFX folder is installed locally.
 
 ## Contributions
 
@@ -23,21 +26,18 @@ List the primary contributions of each author. It is recommended to update this 
 
 ### [Author 2 - replace this with their name]
 
-* Author 2 contributions
+* 
 * as a bulleted list
 * each line starts with an asterisk and a space
 
-### [Author 3 - replace this with their name]
 
-* Author 3 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+### Martin Desousa
 
-### [Author 4 - replace this with their name]
-
-* Author 4 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Set up hibernate.cfg.xml file
+* Worked on DatabaseService functions for interacting with Users in the database, and validating User logins
+* Implemented course search function graphical end
+* Added minor visual fxml details on the login screen and course reviews screen for error messages and buttons
+* Fixed database errors to ensure that no unexpected behaviors occur on the database
 
 ## Issues
 
